--- a/test/monokai_dark/color_scheme_test.css
+++ b/test/monokai_dark/color_scheme_test.css
@@ -1,55 +1,55 @@
-COLOR TEST "Packages/five_easy_color_schemes/Monokai (Dark).tmTheme" "CSS"
+/* COLOR TEST "Packages/five_easy_color_schemes/Monokai (Dark).tmTheme" "CSS" */
 
-      //
-// ^ fg=#f8f8f2 bg=#272822 fs=
+      /* */
+/* ^ fg=#f8f8f2 bg=#272822 fs= */
 
 @font-face {
-// ^ fg=#f92672 fs=
+/* ^ fg=#f92672 fs= */
   font-family: Chunkfive; src: url('Chunkfive.otf');
-// ^ fg=#66d9ef fs=italic
-//                          ^ fg=#66d9ef fs=italic
-//                              ^ fg=#66d9ef fs=
-//                                 ^^^^^^^^^^^^^^^ fg=#e6db74 fs=
+/* ^ fg=#66d9ef fs=italic */
+/*                          ^ fg=#66d9ef fs=italic */
+/*                              ^ fg=#66d9ef fs= */
+/*                                 ^^^^^^^^^^^^^^^ fg=#e6db74 fs= */
 }
 
 body, .usertext {
-// ^ fg=#f92672 fs=
-//        ^ fg=#a6e22e fs=
+/* ^ fg=#f92672 fs= */
+/*        ^ fg=#a6e22e fs= */
   color: #F0F0F0; background: #600;
-// ^ fg=#66d9ef fs=italic
-//                  ^ fg=#66d9ef fs=italic
+/* ^ fg=#66d9ef fs=italic */
+/*                  ^ fg=#66d9ef fs=italic */
   font-family: Chunkfive, sans;
-// ^ fg=#66d9ef fs=italic
+/* ^ fg=#66d9ef fs=italic */
 }
 
 @import url(print.css);
-// ^ fg=#f92672 fs=
-//      ^ fg=#66d9ef fs=
-//          ^^^^^^^^^ fg=#e6db74 fs=
+/* ^ fg=#f92672 fs= */
+/*      ^ fg=#66d9ef fs= */
+/*          ^^^^^^^^^ fg=#e6db74 fs= */
 @media print {
-// ^ fg=#f92672 fs=
-//      ^ fg=#66d9ef fs=
+/* ^ fg=#f92672 fs= */
+/*      ^ fg=#66d9ef fs= */
   a[href^=http]::after {
-//^ fg=#f92672 fs=
-//  ^ fg=#a6e22e fs=
-//      ^^ fg=#f92672 fs=
-//        ^^^^ fg=#e6db74 fs=
-//             ^^^^^^^ fg=#a6e22e fs=italic
+/*^ fg=#f92672 fs= */
+/*  ^ fg=#a6e22e fs= */
+/*      ^^ fg=#f92672 fs= */
+/*        ^^^^ fg=#e6db74 fs= */
+/*             ^^^^^^^ fg=#a6e22e fs=italic */
     content: attr(href)
-//      ^ fg=#66d9ef fs=italic
-//              ^ fg=#66d9ef fs=
-//                  ^ fg=#a6e22e fs=
+/*      ^ fg=#66d9ef fs=italic */
+/*              ^ fg=#66d9ef fs= */
+/*                  ^ fg=#a6e22e fs= */
   }
 }
 
 #container > .container:first-child {
-//  ^ fg=#a6e22e fs=
-//              ^ fg=#a6e22e fs=
-//                      ^ fg=#a6e22e fs=italic
+/*  ^ fg=#a6e22e fs= */
+/*              ^ fg=#a6e22e fs= */
+/*                      ^ fg=#a6e22e fs=italic */
     margin-top: 20px;
-//  ^ fg=#66d9ef fs=italic
-//              ^^ fg=#ae81ff fs=
-//                ^^ fg=#f92672 fs=
+/*  ^ fg=#66d9ef fs=italic */
+/*              ^^ fg=#ae81ff fs= */
+/*                ^^ fg=#f92672 fs= */
 }
 
 pre code {
